--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!-- <script
-  src="https://challenges.cloudflare.com/turnstile/v0/api.js"
-  async
-  defer
-></script> -->
-
+<meta property="og:title" content="daandouwe"/>
+<meta property="og:image" content="daandouwebouwe.svg"/>
+<meta property="og:description" content="Daan Douwe van Stigt"/>
+<meta property="og:url" content="https://daandouwe.com"/>
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="627"/>
+<meta property="og:type" content="website"/> 
 
 <HEAD>
-<TITLE>daandouwe</TITLE>
+<!-- <TITLE>daandouwe</TITLE> -->
 <link rel="stylesheet" href="main1.css" media="screen" /> <link rel="stylesheet" href="mobile1.css" media="screen and (max-device-width: 800px)" />
  <media="screen and (max-device-width: 800px)" />
-<meta name="description" content="hi">
+<meta name="description" content="Daan Douwe van Stigt">
 </HEAD>
 <meta name="viewport" content="width=device-width, initial-scale=0.7,"/>
 
@@ -25,7 +26,7 @@
 </font>
 &nbsp;&nbsp;<A HREF="https://github.com/daandouwe"style="text-decoration:none;"><font color=#1C7FFF>c</font><font color=#2824B1>ode</font><font color="WHITE">n</font></A></br>
 &nbsp;&nbsp;
-<A HREF="veiligbouwen.html"style="text-decoration:none;"><font color=#FF171A>bo</font><font color=#FF5C00>u</font><font color=#00FF00>we</font><font color=#C1C1C1>n</font></A></br>
+<A HREF="bouwen.html"style="text-decoration:none;"><font color=#FF171A>bo</font><font color=#FF5C00>u</font><font color=#00FF00>we</font><font color=#C1C1C1>n</font></A></br>
 
 </font>
 <font style="font-family:times;font-size:64px;">
@@ -58,30 +59,3 @@
 </br>
 
 &nbsp;&nbsp;<A HREF="https://billwurtz.com/"style="text-decoration:none;font-size:16px"><font color="white">i copied this design from billwurtz i don't know how to design and his design is nice</A></br>
-
-<!-- <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="KPG5LV7ZH9SRC">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-
-
-
-
-<br>
-<br>
-<A rel="me" href="https://mastodon.social/@billwurtz"style="text-decoration:none;"><font style="font-family:times;color:#000000;font-size:10px;">m</font></A>
-
-<br>
-<br>
-
-<A rel="me" href="https://bsky.app/profile/billwurtz.com"style="text-decoration:none;"><font style="font-family:times;color:#000000;font-size:10px;">b</font></A>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-4716 -->
