--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </font>
 &nbsp;&nbsp;<A HREF="https://github.com/daandouwe"style="text-decoration:none;"><font color=#1C7FFF>c</font><font color=#2824B1>ode</font><font color="WHITE">n</font></A></br>
 &nbsp;&nbsp;
-<A HREF="bouwen.html"style="text-decoration:none;"><font color=#FF171A>bo</font><font color=#FF5C00>u</font><font color=#00FF00>we</font><font color=#C1C1C1>n</font></A></br>
+<A HREF="bouwen"style="text-decoration:none;"><font color=#FF171A>bo</font><font color=#FF5C00>u</font><font color=#00FF00>we</font><font color=#C1C1C1>n</font></A></br>
 
 </font>
 <font style="font-family:times;font-size:64px;">
