--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<TITLE>Daan Douwe Bouwem</TITLE>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -187,7 +188,7 @@
                     <table class="content-table">
                         <tr>
                             <td class="logo-cell">
-                                <img src="daandouwebouwen.svg" alt="Daan Douwe Bouwen" class="logo">
+                                <img src="logo.svg" alt="Daan Douwe Bouwen" class="logo">
                             </td>
                             <td class="content-cell">
                                 <div class="company">Daan Douwe Bouwen</div>
