--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<meta property="og:title" content="daandouwe"/>
-<meta property="og:image" content="daandouwebouwe.svg"/>
-<meta property="og:description" content="Daan Douwe van Stigt"/>
+<meta property="og:title" content="Daan Douwe van Stigt"/>
+<meta property="og:image" content="thumbnail.svg"/>
+<meta property="og:description" content="I build useful things"/>
 <meta property="og:url" content="https://daandouwe.com"/>
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="627"/>
@@ -26,7 +26,7 @@
 </font>
 &nbsp;&nbsp;<A HREF="https://github.com/daandouwe"style="text-decoration:none;"><font color=#1C7FFF>c</font><font color=#2824B1>ode</font><font color="WHITE">n</font></A></br>
 &nbsp;&nbsp;
-<A HREF="bouwen"style="text-decoration:none;"><font color=#FF171A>bo</font><font color=#FF5C00>u</font><font color=#00FF00>we</font><font color=#C1C1C1>n</font></A></br>
+<A HREF="/bouwen/"style="text-decoration:none;"><font color=#FF171A>bo</font><font color=#FF5C00>u</font><font color=#00FF00>we</font><font color=#C1C1C1>n</font></A></br>
 
 </font>
 <font style="font-family:times;font-size:64px;">
