--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta property="og:title" content="Daan Douwe van Stigt"/>
-<meta property="og:image" content="thumbnail.svg"/>
+<!-- <meta property="og:image" content="thumbnail.svg"/> -->
 <meta property="og:description" content="I build useful things"/>
 <meta property="og:url" content="https://daandouwe.com"/>
 <meta property="og:image:width" content="1200" />
@@ -7,6 +7,9 @@
 <meta property="og:type" content="website"/> 
 
 <HEAD>
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="shortcut icon" href="/favicon.ico">
 <!-- <TITLE>daandouwe</TITLE> -->
 <link rel="stylesheet" href="main1.css" media="screen" /> <link rel="stylesheet" href="mobile1.css" media="screen and (max-device-width: 800px)" />
  <media="screen and (max-device-width: 800px)" />
