--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,21 +19,22 @@
     <meta name="description" content="I build useful things">
     <meta name="author" content="Daan Douwe van Stigt">
     
-    <!-- Open Graph / Social Media -->
+    <!-- Open Graph / Social Media (WhatsApp, Facebook, etc.) -->
     <meta property="og:title" content="Daan Douwe van Stigt">
     <meta property="og:description" content="I build useful things">
     <meta property="og:url" content="https://daandouwe.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://daandouwe.com/thumbnail.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="627">
+    <meta property="og:image" content="https://daandouwe.com/social-share.jpg">
+    <!-- <meta property="og:image:width" content="1200"> -->
+    <!-- <meta property="og:image:height" content="630"> -->
+    <meta property="og:image:alt" content="Daan Douwe van Stigt">
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Daan Douwe van Stigt">
     <meta name="twitter:description" content="I build useful things">
+    <meta name="twitter:image" content="https://daandouwe.com/social-share.jpg">
 </head>
-
 
 
 <body bgcolor=black>
