--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<TITLE>Daan Douwe Bouwem</TITLE>
+<TITLE>Daan Douwe Bouwen</TITLE>
 <html>
 <head>
     <!DOCTYPE html>
@@ -11,9 +11,9 @@
         <title>Daan Douwe Bouwen - I build things</title>
         
         <!-- Favicon -->
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="shortcut icon" href="favicon.ico">
         
         <!-- CSS -->
         <link rel="stylesheet" href="main1.css" media="screen">
@@ -28,7 +28,7 @@
         <meta property="og:description" content="I build things">
         <meta property="og:url" content="https://daandouwe.com">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://daandouwe.com/bouwen/logo.png">
+        <meta property="og:image" content="logo.png">
         <!-- <meta property="og:image:width" content="1200"> -->
         <!-- <meta property="og:image:height" content="630"> -->
         <meta property="og:image:alt" content="Daan Douwe van Stigt">
@@ -37,7 +37,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Daam Douwe Bouwen">
         <meta name="twitter:description" content="I build things">
-        <meta name="twitter:image" content="https://daandouwe.com/bouwen/logo.png">
+        <meta name="twitter:image" content="logo.png">
     </head>
 
     <style>
