--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta property="og:url" content="https://daandouwe.com">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://daandouwe.com/favicon.png">
-    <!-- <meta property="og:image:width" content="1200"> -->
-    <!-- <meta property="og:image:height" content="630"> -->
+    <meta property="og:image:width" content="480">
+    <meta property="og:image:height" content="480">
     <meta property="og:image:alt" content="Daan Douwe van Stigt">
     
     <!-- Twitter Card -->
