--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="I build with code and wood">
     <meta property="og:url" content="https://daandouwe.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://daandouwe.com/favicon.png">
+    <meta property="og:image" content="favicon.png">
     <meta property="og:image:width" content="480">
     <meta property="og:image:height" content="480">
     <meta property="og:image:alt" content="Daan Douwe van Stigt">
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Daan Douwe van Stigt">
     <meta name="twitter:description" content="I build with code and wood">
-    <meta name="twitter:image" content="https://daandouwe.com/favicon.png">
+    <meta name="twitter:image" content="favicon.png">
 </head>
 
 
