--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -20,12 +20,12 @@
         <link rel="stylesheet" href="mobile1.css" media="screen and (max-width: 800px)">
         
         <!-- SEO Meta Tags -->
-        <meta name="description" content="I build things">
+        <meta name="description" content="Daan Douwe van Stigt - I build things">
         <meta name="author" content="Daan Douwe van Stigt">
         
         <!-- Open Graph / Social Media (WhatsApp, Facebook, etc.) -->
         <meta property="og:title" content="Daan Douwe Bouwen">
-        <meta property="og:description" content="I build things">
+        <meta property="og:description" content="Daan Douwe van Stigt - I build things">
         <meta property="og:url" content="https://daandouwe.com">
         <meta property="og:type" content="website">
         <meta property="og:image" content="logo.png">
@@ -36,7 +36,7 @@
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Daam Douwe Bouwen">
-        <meta name="twitter:description" content="I build things">
+        <meta name="twitter:description" content="Daan Douwe van Stigt - I build things">
         <meta name="twitter:image" content="logo.png">
     </head>
 
