--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
     <meta name="twitter:title" content="Daan Douwe van Stigt">
     <meta name="twitter:description" content="I build with code and wood">
     <meta name="twitter:image" content="favicon.png">
+    <meta name="keywords" content="Daan Douwe, developer, builder, carpentry, software, projects, portfolio">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DHPE5YBVPT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DHPE5YBVPT');
+    </script>
+
+    <!-- Structured Data for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Daan Douwe van Stigt",
+      "url": "https://daandouwe.com",
+      "description": "I build useful things in wood and code",
+      "sameAs": [
+        "https://github.com/daandouwe",
+        "https://linkedin.com/in/daan-douwe-🔨-van-stigt-713772133"
+      ]
+    }
+    </script>
 </head>
 
 
@@ -80,3 +106,11 @@
 </br>
 
 &nbsp;&nbsp;<A HREF="https://billwurtz.com/"style="text-decoration:none;font-size:16px"><font color="white">i copied this design from billwurtz i don't know how to design and his design is nice</A></br>
+
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  
