--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -235,8 +235,8 @@
                                 <div class="contact">
                                     <!-- Turnstile widget -->
                                     <div class="cf-turnstile" 
-                                        data-sitekey="YOUR_SITE_KEY_HERE"
-                                        data-callback="onTurnstileSuccess">
+                                        data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
+                                        data-callback="onSuccess">
                                     </div>
                                     <div id="contact-info" style="display: none;"></div>
                                         <div>Amsterdam, Nederland</div>
@@ -245,7 +245,7 @@
                                     </div>
                                 </div>
                                 <script>
-                                    function onTurnstileSuccess(token) {
+                                    function onSuccess(token) {
                                         // Show contact info when Turnstile is completed
                                         document.getElementById('contact-info').style.display = 'block';
                                         
