--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -236,9 +236,10 @@
                                     <!-- Turnstile widget -->
                                     <div class="cf-turnstile" 
                                         data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
+                                        data-theme="light"
                                         data-callback="onSuccess">
                                     </div>
-                                    <div id="contact-info" style="display: none;"></div>
+                                    <div id="contact-info" style="display: none;">
                                         <div>Amsterdam, Nederland</div>
                                         <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
                                         <div>KvK: 97741256</div>
