--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     </script>
 </head>
 <style>
-  /* body {
-      cursor: url('cursor.png'), auto;
-  } */
-  body { cursor: none; }
+  body {
+      cursor: none; /* Hide default cursor */
+  }
 
+  /* Cursor container */
   .cursor-container {
       position: fixed;
       pointer-events: none;
@@ -93,50 +93,17 @@
       transform: translate(-50%, -50%);
   }
 
-  .spinning-dd-cursor {
-      width: 40px;
-      height: 30px;
-      display: flex;
+  /* Your spinning animation */
+  .spinning-cursor {
       animation: spinY 2s linear infinite;
       transform-style: preserve-3d;
+      width: 32px;  /* Adjust to match your cursor.png size */
+      height: 32px;
   }
 
-  .d-letter {
-      width: 20px;
-      height: 30px;
-      background-color: #e91ee6;
-      position: relative;
-  }
-
-  .left-d {
-      border-radius: 0 15px 15px 0;
-  }
-
-  .left-d::before {
-      content: '';
-      position: absolute;
-      width: 12px;
-      height: 22px;
-      background-color: white;
-      right: 0;
-      top: 4px;
-      border-radius: 0 11px 11px 0;
-  }
-
-  .right-d {
-      border-radius: 15px 0 0 15px;
-      transform: scaleX(-1);
-  }
-
-  .right-d::before {
-      content: '';
-      position: absolute;
-      width: 12px;
-      height: 22px;
-      background-color: white;
-      right: 0;
-      top: 4px;
-      border-radius: 0 11px 11px 0;
+  .spinning-cursor img {
+      width: 100%;
+      height: 100%;
   }
 
   @keyframes spinY {
@@ -149,21 +116,18 @@
 <font style="font-family:times;font-size:64px;">
 <body style="word-wrap: initial;">
   <div class="cursor-container" id="cursor">
-    <div class="spinning-dd-cursor">
-        <div class="d-letter left-d"></div>
-        <div class="d-letter right-d"></div>
+    <div class="spinning-cursor">
+        <img src="cursor.png" alt="Cursor">
     </div>
 </div>
-</body>
 <script>
-  if (!('ontouchstart' in window)) {
-      const cursor = document.getElementById('cursor');
-      document.addEventListener('mousemove', (e) => {
-          cursor.style.left = e.clientX + 'px';
-          cursor.style.top = e.clientY + 'px';
-      });
-  }
+  const cursor = document.getElementById('cursor');
+  document.addEventListener('mousemove', (e) => {
+      cursor.style.left = e.clientX + 'px';
+      cursor.style.top = e.clientY + 'px';
+  });
   </script>
+</body>
 
 <font style="font-family:times;font-size:64px;">
 </font>
