Increase cursor size

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 
   /* Your spinning animation */
   .spinning-cursor {
-      animation: spinY 2s linear infinite;
+      animation: spinY 3s linear infinite;
       transform-style: preserve-3d;
-      width: 32px;  /* Adjust to match your cursor.png size */
-      height: 32px;
+      width: 128px;  /* Adjust to match your cursor.png size */
+      height: 128px;
   }
 
   .spinning-cursor img {
@@ -117,7 +117,7 @@
 <body style="word-wrap: initial;">
   <div class="cursor-container" id="cursor">
     <div class="spinning-cursor">
-        <img src="cursor.png" alt="Cursor">
+        <img src="logo.png" alt="Cursor">
     </div>
 </div>
 <script>
