Increase cursor size

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   .spinning-cursor {
       animation: spinY 3s linear infinite;
       transform-style: preserve-3d;
-      width: 128px;  /* Adjust to match your cursor.png size */
-      height: 128px;
+      width: 64px;  /* Adjust to match your cursor.png size */
+      height: 64px;
   }
 
   .spinning-cursor img {
@@ -117,7 +117,7 @@
 <body style="word-wrap: initial;">
   <div class="cursor-container" id="cursor">
     <div class="spinning-cursor">
-        <img src="logo.png" alt="Cursor">
+        <img src="cursor.png" alt="Cursor">
     </div>
 </div>
 <script>
