--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- Preload important resources -->
     <link rel="preload" href="main1.css" as="style">
     <link rel="preload" href="/favicon-32x32.png" as="image">
-
+    <link rel="manifest" href="/site.webmanifest">
+    
     <!-- DNS prefetch for external resources -->
     <link rel="dns-prefetch" href="//www.google-analytics.com">
     
@@ -34,7 +35,7 @@
     <meta property="og:description" content="I build with code and wood">
     <meta property="og:url" content="https://daandouwe.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="favicon.png">
+    <meta property="og:image" content="logo.png">
     <meta property="og:image:width" content="480">
     <meta property="og:image:height" content="480">
     <meta property="og:image:alt" content="Daan Douwe van Stigt">
@@ -43,7 +44,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Daan Douwe van Stigt">
     <meta name="twitter:description" content="I build with code and wood">
-    <meta name="twitter:image" content="favicon.png">
+    <meta name="twitter:image" content="logo.png">
     <meta name="keywords" content="Daan Douwe, developer, builder, carpentry, software, projects, portfolio">
 
     <!-- Preload important resources -->
@@ -138,11 +139,11 @@
 </font>
 <font style="font-family:times;font-size:64px;">
 
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="schrijven.html"style="text-decoration:none;"><font color=#E6E6E6>schrij</font><font color=#616161>ven</font></A>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="/scrhijven/"style="text-decoration:none;"><font color=#E6E6E6>schrij</font><font color=#616161>ven</font></A>
 </br>
 
 
-&nbsp;&nbsp;&nbsp;<A HREF="praten.html"style="text-decoration:none;"><font style="font-family:times;color:#CE00FF;font-size:24px;">praten</font></A>
+&nbsp;&nbsp;&nbsp;<A HREF="praten.html"style="text-decoration:none;"><font style="font-family:times;color:#7429FF;font-size:24px;">praten</font></A>
 
 </br>
 </br>
