--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -33,7 +33,7 @@
         <meta property="og:description" content="Daan Douwe van Stigt - I build things">
         <meta property="og:url" content="https://daandouwe.com">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="logo.png">
+        <meta property="og:image" content="android-chrome-512x512.png">
         <!-- <meta property="og:image:width" content="1200"> -->
         <!-- <meta property="og:image:height" content="630"> -->
         <meta property="og:image:alt" content="Daan Douwe van Stigt">
@@ -42,7 +42,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Daam Douwe Bouwen">
         <meta name="twitter:description" content="Daan Douwe van Stigt - I build things">
-        <meta name="twitter:image" content="logo.png">
+        <meta name="twitter:image" content="android-chrome-512x512.png">
 
         <!-- Preload important resources -->
         <link rel="preload" href="main1.css" as="style">
@@ -71,6 +71,10 @@
     </head>
 
     <style>
+        body {
+            cursor: url('cursor.png'), auto;
+        }
+
         body {
             background-color: #F7ECD6;
             margin: 0;
