--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="preload" href="main1.css" as="style">
     <link rel="preload" href="/favicon-32x32.png" as="image">
     <link rel="manifest" href="/site.webmanifest">
-    
+
     <!-- DNS prefetch for external resources -->
     <link rel="dns-prefetch" href="//www.google-analytics.com">
     
@@ -139,7 +139,7 @@
 </font>
 <font style="font-family:times;font-size:64px;">
 
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="/scrhijven/"style="text-decoration:none;"><font color=#E6E6E6>schrij</font><font color=#616161>ven</font></A>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="/schrijven/"style="text-decoration:none;"><font color=#E6E6E6>schrij</font><font color=#616161>ven</font></A>
 </br>
 
 
