--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -72,7 +72,7 @@
 
     <style>
         body {
-            cursor: url('cursor.png'), auto;
+            cursor: url('./cursor.png'), auto;
         }
 
         body {
