--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -302,21 +302,21 @@
       <script>
         // List your image filenames here
         const images = [
-        'images/image1.jpg',
-        'images/image2.jpg',
-        'images/image3.jpg',
-        'images/image4.jpg',
-        'images/image5.jpg',
-        'images/image6.jpg',
-        'images/image7.jpg',
-        'images/image8.jpg',
-        'images/image9.jpg',
-        'images/image10.jpg',
-        'images/image11.jpg',
-        'images/image12.jpg',
-        'images/image13.jpg',
-        'images/image14.jpg',
-        'images/image15.jpg',
+        'image1.jpg',
+        'image2.jpg',
+        'image3.jpg',
+        'image4.jpg',
+        'image5.jpg',
+        'image6.jpg',
+        'image7.jpg',
+        'image8.jpg',
+        'image9.jpg',
+        'image10.jpg',
+        'image11.jpg',
+        'image12.jpg',
+        'image13.jpg',
+        'image14.jpg',
+        'image15.jpg',
         ];
 
         let currentIndex = 0;
@@ -333,6 +333,6 @@
 
         // Rotate every 6 seconds
         setInterval(rotateImage, 6000);
-      </script>A
+      </script>
 </body>
 </html>
