--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -300,21 +300,21 @@
         // List your image filenames here
         const images = [
         'logo.svg',
-        'image1.jpg',
-        'image2.jpg',
-        'image3.jpg',
-        'image4.jpg',
-        'image5.jpg',
-        'image6.jpg',
-        'image7.jpg',
-        'image8.jpg',
-        'image9.jpg',
-        'image10.jpg',
-        'image11.jpg',
-        'image12.jpg',
-        'image13.jpg',
-        'image14.jpg',
-        'image15.jpg',
+        'image1.jpeg',
+        'image2.jpeg',
+        'image3.jpeg',
+        'image4.jpeg',
+        'image5.jpeg',
+        'image6.jpeg',
+        'image7.jpeg',
+        'image8.jpeg',
+        'image9.jpeg',
+        'image10.jpeg',
+        'image11.jpeg',
+        'image12.jpeg',
+        'image13.jpeg',
+        'image14.jpeg',
+        'image15.jpeg',
         ];
 
         let currentIndex = 0;
