--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -299,22 +299,22 @@
     <script>
         // List your image filenames here
         const images = [
-        'logo.svg',
-        'image1.jpeg',
-        'image2.jpeg',
-        'image3.jpeg',
-        'image4.jpeg',
-        'image5.jpeg',
-        'image6.jpeg',
-        'image7.jpeg',
-        'image8.jpeg',
-        'image9.jpeg',
-        'image10.jpeg',
-        'image11.jpeg',
-        'image12.jpeg',
-        'image13.jpeg',
-        'image14.jpeg',
-        'image15.jpeg',
+        // 'logo.svg',
+        'images/image1.jpeg',
+        'images/image2.jpeg',
+        'images/image3.jpeg',
+        'images/image4.jpeg',
+        'images/image5.jpeg',
+        'images/image6.jpeg',
+        'images/image7.jpeg',
+        'images/image8.jpeg',
+        'images/image9.jpeg',
+        'images/image10.jpeg',
+        'images/image11.jpeg',
+        'images/image12.jpeg',
+        'images/image13.jpeg',
+        'images/image14.jpeg',
+        'images/image15.jpeg',
         ];
 
         let currentIndex = 0;
