--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -299,7 +299,7 @@
     <script>
         // List your image filenames here
         const images = [
-        // 'logo.svg',
+        'logo.svg',
         'images/image1.jpeg',
         'images/image2.jpeg',
         'images/image3.jpeg',
