--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -257,7 +257,7 @@
                 <td class="main-container">
                     <table class="content-table">
                         <tr>
-                            <td class="logo-cell">
+                            <td class="logo-col">
                                 <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
                             </td>
                             <td class="content-cell">
