--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -308,13 +308,16 @@
         'images/image6.jpeg',
         'images/image7.jpeg',
         'images/image8.jpeg',
-        // 'images/image9.jpeg',
-        // 'images/image10.jpeg',
-        // 'images/image11.jpeg',
-        // 'images/image12.jpeg',
-        // 'images/image13.jpeg',
-        // 'images/image14.jpeg',
-        // 'images/image15.jpeg',
+        'images/image9.jpeg',
+        'images/image10.jpeg',
+        'images/image12.jpeg',
+        'images/image13.jpeg',
+        'images/image14.jpeg',
+        'images/image15.jpeg',
+        'images/image16.jpeg',
+        'images/image17.jpeg',
+        'images/image18.jpeg',
+        'images/image19.jpeg',
         ];
 
         let currentIndex = 0;
