--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -300,6 +300,7 @@
         // List your image filenames here
         const images = [
         'logo.svg',
+        'images/image0.jpeg',
         'images/image1.jpeg',
         'images/image2.jpeg',
         'images/image3.jpeg',
@@ -318,6 +319,8 @@
         'images/image17.jpeg',
         'images/image18.jpeg',
         'images/image19.jpeg',
+        'images/image20.jpeg',
+        'images/image21.jpeg',
         ];
 
         let currentIndex = 0;
