--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -300,27 +300,25 @@
         // List your image filenames here
         const images = [
         'logo.svg',
-        'images/image0.jpeg',
-        'images/image1.jpeg',
-        'images/image2.jpeg',
-        'images/image3.jpeg',
-        'images/image4.jpeg',
-        'images/image5.jpeg',
-        'images/image6.jpeg',
-        'images/image7.jpeg',
-        'images/image8.jpeg',
-        'images/image9.jpeg',
-        'images/image10.jpeg',
-        'images/image12.jpeg',
-        'images/image13.jpeg',
-        'images/image14.jpeg',
-        'images/image15.jpeg',
-        'images/image16.jpeg',
-        'images/image17.jpeg',
-        'images/image18.jpeg',
-        'images/image19.jpeg',
-        'images/image20.jpeg',
-        'images/image21.jpeg',
+        'images/1.jpeg',
+        'images/2.jpeg',
+        'images/3.jpeg',
+        'images/4.jpeg',
+        'images/5.jpeg',
+        'images/6.jpeg',
+        'images/7.jpeg',
+        'images/8.jpeg',
+        'images/9.jpeg',
+        'images/10.jpeg',
+        'images/12.jpeg',
+        'images/13.jpeg',
+        'images/14.jpeg',
+        'images/15.jpeg',
+        'images/16.jpeg',
+        'images/17.jpeg',
+        'images/18.jpeg',
+        'images/19.jpeg',
+        'images/20.jpeg',
         ];
 
         let currentIndex = 0;
