--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -299,7 +299,7 @@
     <script>
         // List your image filenames here
         const images = [
-        'logo.svg',
+        'logo-large.svg',
         'images/1.jpeg',
         'images/2.jpeg',
         'images/3.jpeg',
