--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -66,7 +66,7 @@
                                 <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
                             </td>
                             <td class="content-cell">
-                                <div class="company">Daan<br>Douwe<br>Bouwen</div>
+                                <div class="company">Daan Douwe<br>Bouwen</div>
                                 <div class="profession">Timmerman & Aannemer</div>
                                 <div class="contact">
                                     <!-- Turnstile widget -->
