--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -109,6 +109,7 @@
             'images/8.jpeg',
             'images/9.jpeg',
             'images/10.jpeg',
+            'images/11.jpeg',
             'images/12.jpeg',
             'images/13.jpeg',
             'images/14.jpeg',
