--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -63,7 +63,7 @@
                     <table class="content-table">
                         <tr>
                             <td class="logo-col">
-                                <img id="rotatingImage" src="" alt="Daan Douwe Bouwen">
+                                <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
                             </td>
                             <td class="content-cell">
                                 <div class="company">Daan Douwe<br>Bouwen</div>
@@ -75,7 +75,7 @@
                                         data-theme="light"
                                         data-callback="onSuccess">
                                     </div>
-                                    <div id="contact-info" style="contact-info">
+                                    <div id="contact-info" style="display: none;">
                                         <div>Amsterdam, Nederland</div>
                                         <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
                                         <div>KvK: 97741256</div>
