--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -113,6 +113,7 @@
             'images/18.jpeg',
             'images/19.jpeg',
             'images/20.jpeg',
+            'images/21.jpeg',
         ];
     
         let currentIndex = 0;
