--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -95,7 +95,8 @@
             'logo-large.svg',
             'images/1.jpeg',
             'images/2.jpeg',
-            'images/3.jpeg',
+            // 'images/3.jpeg',
+            'images/21.jpeg',
             'images/4.jpeg',
             'images/5.jpeg',
             'images/6.jpeg',
@@ -113,7 +114,6 @@
             'images/18.jpeg',
             'images/19.jpeg',
             'images/20.jpeg',
-            'images/21.jpeg',
         ];
     
         let currentIndex = 0;
