--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="mobile1.css" media="screen and (max-width: 800px)">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="I build with code and wood">
+    <meta name="description" content="I build in code and wood">
     <meta name="author" content="Daan Douwe van Stigt">
     <meta name="language" content="Dutch">
     <meta name="geo.region" content="NL">
