--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -72,7 +72,7 @@
     <div class="dropdown">
         <button class="dropdown-button" id="dropdownButton">
             <span>Menu</span>
-            <img src="favicon-512x512.png" alt="arrow" class="dropdown-arrow" id="dropdownArrow">
+            <img src="favicon-round.png" alt="arrow" class="dropdown-arrow" id="dropdownArrow">
         </button>
         <div class="dropdown-content" id="dropdownContent">
             <a href="#link1">Link 1</a>
