--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -56,30 +56,20 @@
     </script>
 </head>
 <body>
-    <!-- <div class="dropdown">
-        <button class="dropdown-button" id="dropdownButton">
-            <span>Menu</span>
-            <svg class="dropdown-arrow" id="dropdownArrow" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5 7.5L10 12.5L15 7.5" stroke="#063B40" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-        </button>
-        <div class="dropdown-content" id="dropdownContent">
-            <a href="#link1">Link 1</a>
-            <a href="#link2">Link 2</a>
-            <a href="#link3">Link 3</a>
+    <!-- Fixed Navbar -->
+    <nav class="navbar">
+        <div class="dropdown">
+            <button class="dropdown-button" id="dropdownButton">
+                <img src="favicon-round.svg" alt="Menu" class="dropdown-arrow" id="dropdownArrow">
+            </button>
+            <div class="dropdown-content" id="dropdownContent">
+                <a href="#link1">Link 1</a>
+                <a href="#link2">Link 2</a>
+                <a href="#link3">Link 3</a>
+            </div>
         </div>
-    </div> -->
-    <div class="dropdown">
-        <button class="dropdown-button" id="dropdownButton">
-            <span>Menu</span>
-            <img src="favicon-round.png" alt="arrow" class="dropdown-arrow" id="dropdownArrow">
-        </button>
-        <div class="dropdown-content" id="dropdownContent">
-            <a href="#link1">Link 1</a>
-            <a href="#link2">Link 2</a>
-            <a href="#link3">Link 3</a>
-        </div>
-    </div>
+    </nav>
+
     <div class="signature">
         <table class="content-table">
             <tr>
@@ -119,8 +109,8 @@
             'logo-large.svg',
             'images/1.jpeg',
             'images/2.jpeg',
-            // 'images/3.jpeg',
             'images/21.jpeg',
+            'images/3.jpeg',
             'images/4.jpeg',
             'images/5.jpeg',
             'images/6.jpeg',
@@ -151,10 +141,10 @@
         // Show first image immediately
         rotateImage();
         
-        // Wait 3 seconds, then start rotating every 1.3 seconds
+        // Wait 4 seconds, then start rotating every 1.5 seconds
         setTimeout(function() {
             rotateImage();
-            setInterval(rotateImage, 1100);
+            setInterval(rotateImage, 1500);
         }, 4000);
     </script>
 
