--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -63,9 +63,8 @@
                 <img src="favicon-round.svg" alt="Menu" class="dropdown-arrow" id="dropdownArrow">
             </button>
             <div class="dropdown-content" id="dropdownContent">
-                <a href="#link1">Link 1</a>
-                <a href="#link2">Link 2</a>
-                <a href="#link3">Link 3</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#contact">Contact</a>
             </div>
         </div>
     </nav>
