--- a/bouwen/contact/index.html
+++ b/bouwen/contact/index.html
@@ -64,7 +64,8 @@
             </button>
             <div class="dropdown-content" id="dropdownContent">
                 <a href="../">Home</a>
-                <a href="#contact">Contact</a>
+                <a href="../gallery/">Gallery</a>
+                <a href="./">Contact</a>
             </div>
         </div>
     </nav>
