--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -63,8 +63,9 @@
                 <img src="favicon-round.svg" alt="Menu" class="dropdown-arrow" id="dropdownArrow">
             </button>
             <div class="dropdown-content" id="dropdownContent">
-                <a href="#gallery">Gallery</a>
-                <a href="#contact">Contact</a>
+                <a href="./">Contact</a>
+                <a href="gallery/">Gallery</a>
+                <a href="contact/">Contact</a>
             </div>
         </div>
     </nav>
