--- a/bouwen/contact/index.html
+++ b/bouwen/contact/index.html
@@ -56,7 +56,7 @@
     </script>
 </head>
 <body>
-    <!-- Fixed Navbar -->
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="dropdown">
             <button class="dropdown-button" id="dropdownButton">
