--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -63,7 +63,7 @@
                 <img src="favicon-round.svg" alt="Menu" class="dropdown-arrow" id="dropdownArrow">
             </button>
             <div class="dropdown-content" id="dropdownContent">
-                <a href="./">Contact</a>
+                <a href="./">Home</a>
                 <a href="gallery/">Gallery</a>
                 <a href="contact/">Contact</a>
             </div>
