--- a/bouwen/contact/index.html
+++ b/bouwen/contact/index.html
@@ -71,20 +71,29 @@
     </nav>
 
     <div class="signature">
-        <div class="contact-page">
-            <h1 class="contact-heading">Contact</h1>
-            <div class="contact">
-                <!-- Turnstile widget -->
-                <div class="cf-turnstile" 
-                    data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
-                    data-theme="light"
-                    data-callback="onSuccess">
-                </div>
-                <div id="contact-info" style="display: none;">
-                    <div>Amsterdam, Nederland</div>
-                    <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
-                    <div>KvK: 97741256</div>
-                </div>
+        <div class="logo-col">
+          <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
+        </div>
+      
+        <div class="content-cell">
+          <div class="company">Daan Douwe Bouwen</div>
+          <div class="profession">Timmerman & Aannemer</div>
+        </div>
+    </div>
+
+    <div class="contact-page">
+        <div class="company">Contact</div>
+        <div class="contact">
+            <!-- Turnstile widget -->
+            <div class="cf-turnstile" 
+                data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
+                data-theme="light"
+                data-callback="onSuccess">
+            </div>
+            <div id="contact-info" style="display: none;">
+                <div>Amsterdam, Nederland</div>
+                <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
+                <div>KvK: 97741256</div>
             </div>
         </div>
     </div>
