--- a/bouwen/contact/index.html
+++ b/bouwen/contact/index.html
@@ -72,7 +72,7 @@
 
     <div class="signature">
         <div class="logo-col">
-          <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
+          <img id="./logo.svg" src="" alt="Daan Douwe Bouwen" class="logo">
         </div>
       
         <div class="content-cell">
