--- a/bouwen/gallery/index.html
+++ b/bouwen/gallery/index.html
@@ -65,7 +65,7 @@
             <div class="dropdown-content" id="dropdownContent">
                 <a href="../">Home</a>
                 <a href="../gallery/">Gallery</a>
-                <a href="./">Contact</a>
+                <a href="../#contact">Contact</a>
             </div>
         </div>
     </nav>
