--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -79,21 +79,23 @@
           <div class="company">Daan Douwe Bouwen</div>
           <div class="profession">Timmerman & Aannemer</div>
         </div>
+    </div>
+    <!-- <br><br> -->
+    <!-- <div class="contact-title" id="contact">Contact</div> -->
+    <!-- <br> -->
+    <div class="contact">
+        <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
         <br>
-        <br>
-        <br>
-        <div class="contact">
-            <div class="contact-title" id="contact">Contact</div>
-            <!-- Turnstile widget -->
-            <div class="cf-turnstile" 
-                data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
-                data-theme="light"
-                data-callback="onSuccess">
-            </div>
-            <div class="contact" style="display: none;">
-                <div>Amsterdam, Nederland</div>
-                <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
-                <div>KvK: 97741256</div>
+        <!-- Turnstile widget -->
+        <div class="cf-turnstile"
+            data-sitekey="0x4AAAAAABvJRWjYdyGLUMm_"
+            data-theme="light"
+            data-callback="onSuccess">
+        </div>
+        <div class="contact" id="contact-turnstile" style="display: none;">
+            <div>Amsterdam, Nederland</div>
+            <div>E: <a href="mailto:bouwen@daandouwe.com">bouwen@daandouwe.com</a></div>
+            <div>KvK: 97741256</div>
         </div>
     </div>
 
@@ -164,7 +166,7 @@
 
     <script>
         function onSuccess(token) {
-            document.getElementById('contact-info').style.display = 'block';
+            document.getElementById('contact-turnstile').style.display = 'block';
             document.querySelector('.cf-turnstile').style.display = 'none';
         }
     </script>
