--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -83,7 +83,7 @@
     <!-- <br><br> -->
     <!-- <div class="contact-title" id="contact">Contact</div> -->
     <!-- <br> -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
         <br>
         <!-- Turnstile widget -->
