--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -84,7 +84,7 @@
     <!-- <div class="contact-title" id="contact">Contact</div> -->
     <!-- <br> -->
     <div class="contact" id="contact">
-        <img id="rotatingImage" src="" alt="Daan Douwe Bouwen" class="logo">
+        <img src="face-round.svg" alt="Daan Douwe Contact" class="logo">
         <br>
         <!-- Turnstile widget -->
         <div class="cf-turnstile"
