--- a/bouwen/index.html
+++ b/bouwen/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="contact" id="contact">
-            <img src="face-round.svg" alt="Daan Douwe Contact" class="logo">
+            <img src="face-round.svg" alt="Daan Douwe Contact" class="contact-icon">
             <br>
             <!-- Turnstile widget -->
             <div class="cf-turnstile"
